--- a/tests/FusionAPITests/tests.html
+++ b/tests/FusionAPITests/tests.html
@@ -6,14 +6,15 @@
 <title>Fusion API Tests</title>
 <link rel="chrome-application-definition" href="manifest.json">
 <script type="text/javascript" src="scripts/jquery-1.7.1.min.js"></script> 
-<style>body{font-family:Helventica, Arial; font-size:11px;}.textbox{border:solid 1px #EEe;width:100%;height:100px;overflow:auto;}</style>
+<style>body{font-family:Helventica, Arial; font-size:11px;}.textbox{border:solid 1px #EEe;width:100%;height:100px;overflow:auto;}#send{background-color:#228822;border:0;}#send:hover{background-color:#22DD22;}</style>
 </head>
 <body>
 
 <h2>Fusion API Tests - <small>Status: </small><img id="status" src="grey.png"/></h2>
 <button id="reload">Reconnect</button>
+<button id="send">Send request</button>
 <div id="results"></div>
-<label>Request:</label>
+<label>Requst method:</label>
 <select id="requests">
   <option value="notset">Please select a request.</option>
   <option value="null">---- List -----</option>
@@ -40,6 +41,9 @@
   <option value="nui_get_pipeline">/get/pipeline</option>
   <option value="nui_get_module">/get/module</option>  
   <option value="nui_get_connection">/get/connection</option>
+  <option value="null">---- Navigate -----</option>
+  <option value="nui_navigate_push">/navigate/push</option>
+  <option value="nui_navigate_pop">/navigate/pop</option>
   <option value="null">---- Save -----</option>
   <option value="nui_save_pipeline">/save/pipeline</option>  
   <option value="null">---- Workflow -----</option>
@@ -47,8 +51,14 @@
   <option value="nui_workflow_stop">/workflow/stop</option>
   <option value="nui_workflow_quit">/workflow/quit</option>
 </select>
+<label>Request parameters</label>
+<textarea class="textbox" id="params">
+{"pipeline" : "root",
+	"module" : "nuiAudioOutputModule",
+	"moduleId" : 1}
+</textarea>
 <p></p>
-<label>Request:</label>
+<label>Request JSON:</label>
 <textarea class="textbox" id="divDataSent"></textarea>
 <p></p>
 <label>Repsonse:</label>
